test.h

typedef long __off_t;
typedef struct _IO_FILE {
  int _flags;
  char *_IO_read_ptr;
  char *_IO_read_end;
  char *_IO_read_base;
  char *_IO_write_base;
  char *_IO_write_ptr;
  char *_IO_write_end;
  char *_IO_buf_base;
  char *_IO_buf_end;
  char *_IO_save_base;
  char *_IO_backup_base;
  char *_IO_save_end;
  struct _IO_marker *_markers;
  struct _IO_FILE *_chain;
  int _fileno;
  int _flags2;
  __off_t _old_offset;
  unsigned short _cur_column;
  signed char _vtable_offset;
  char _shortbuf[1];
  _IO_lock_t *_lock;
  __off64_t _offset;
  struct _IO_codecvt *_codecvt;
  struct _IO_wide_data *_wide_data;
  struct _IO_FILE *_freeres_list;
  void *_freeres_buf;
  struct _IO_FILE **_prevchain;
  int _mode;
  char _unused2[20];
} _IO_FILE;
typedef struct _IO_FILE FILE;
typedef long __ssize_t;
typedef struct __va_list_tag {
  unsigned int gp_offset;
  unsigned int fp_offset;
  void *overflow_arg_area;
  void *reg_save_area;
} __va_list_tag;
typedef struct _G_fpos_t __fpos_t;
typedef __fpos_t fpos_t;
typedef struct random_data {
  int32_t *fptr;
  int32_t *rptr;
  int32_t *state;
  int rand_type;
  int rand_deg;
  int rand_sep;
  int32_t *end_ptr;
} random_data;
typedef struct div_t {
  int quot;
  int rem;
} div_t;
typedef struct ldiv_t {
  long quot;
  long rem;
} ldiv_t;
typedef struct lldiv_t {
  long long quot;
  long long rem;
} lldiv_t;
typedef int wchar_t;
extern int vscanf1(const char *__format, struct __va_list_tag *__arg);
extern int vsscanf1(const char *__s, const char *__format,
                    struct __va_list_tag *__arg);
extern int fgetc(FILE *__stream);
extern int getc(FILE *__stream);
extern int getchar(void);
extern int getc_unlocked(FILE *__stream);
extern int getchar_unlocked(void);
extern int fgetc_unlocked(FILE *__stream);
extern int fputc(int __c, FILE *__stream);
extern int putc(int __c, FILE *__stream);
extern int putchar(int __c);
extern int fputc_unlocked(int __c, FILE *__stream);
extern int putc_unlocked(int __c, FILE *__stream);
extern int putchar_unlocked(int __c);
extern int getw(FILE *__stream);
extern int putw(int __w, FILE *__stream);
extern char *fgets(char *__s, int __n, FILE *__stream);
extern __ssize_t __getdelim(char **__lineptr, uintptr_t *__n, int __delimiter,
                            FILE *__stream);
extern __ssize_t getdelim(char **__lineptr, uintptr_t *__n, int __delimiter,
                          FILE *__stream);
extern __ssize_t getline(char **__lineptr, uintptr_t *__n, FILE *__stream);
extern int fputs(const char *__s, FILE *__stream);
extern int puts(const char *__s);
extern int ungetc(int __c, FILE *__stream);
extern unsigned long fread(void *__ptr, unsigned long __size, unsigned long __n,
                           FILE *__stream);
extern unsigned long fwrite(const void *__ptr, unsigned long __size,
                            unsigned long __n, FILE *__s);
extern uintptr_t fread_unlocked(void *__ptr, uintptr_t __size, uintptr_t __n,
                                FILE *__stream);
extern uintptr_t fwrite_unlocked(const void *__ptr, uintptr_t __size,
                                 uintptr_t __n, FILE *__stream);
extern int fseek(FILE *__stream, long __off, int __whence);
extern long ftell(FILE *__stream);
extern void rewind(FILE *__stream);
extern int fseeko(FILE *__stream, __off_t __off, int __whence);
extern __off_t ftello(FILE *__stream);
extern int fgetpos(FILE *__stream, fpos_t *__pos);
extern int fsetpos(FILE *__stream, const fpos_t *__pos);
extern void clearerr(FILE *__stream);
extern int feof(FILE *__stream);
extern int ferror(FILE *__stream);
extern void clearerr_unlocked(FILE *__stream);
extern int feof_unlocked(FILE *__stream);
extern int ferror_unlocked(FILE *__stream);
extern void perror(const char *__s);
extern int fileno(FILE *__stream);
extern int fileno_unlocked(FILE *__stream);
extern int pclose(FILE *__stream);
extern FILE *popen(const char *__command, const char *__modes);
extern char *ctermid(char *__s);
extern void flockfile(FILE *__stream);
extern int ftrylockfile(FILE *__stream);
extern void funlockfile(FILE *__stream);
extern int __uflow(FILE *arg1);
extern int __overflow(FILE *arg1, int arg2);
extern uintptr_t __ctype_get_mb_cur_max(void);
extern double atof(const char *__nptr);
extern int atoi(const char *__nptr);
extern long atol(const char *__nptr);
extern long long atoll(const char *__nptr);
extern double strtod(const char *__nptr, char **__endptr);
extern float strtof(const char *__nptr, char **__endptr);
extern u128 strtold(const char *__nptr, char **__endptr);
extern long strtol(const char *__nptr, char **__endptr, int __base);
extern unsigned long strtoul(const char *__nptr, char **__endptr, int __base);
extern long long strtoq(const char *__nptr, char **__endptr, int __base);
extern unsigned long long strtouq(const char *__nptr, char **__endptr,
                                  int __base);
extern long long strtoll(const char *__nptr, char **__endptr, int __base);
extern unsigned long long strtoull(const char *__nptr, char **__endptr,
                                   int __base);
extern char *l64a(long __n);
extern long a64l(const char *__s);
extern long random(void);
extern void srandom(unsigned int __seed);
extern char *initstate(unsigned int __seed, char *__statebuf,
                       uintptr_t __statelen);
extern char *setstate(char *__statebuf);
extern int random_r(struct random_data *__buf, int32_t *__result);
extern int srandom_r(unsigned int __seed, struct random_data *__buf);
extern int initstate_r(unsigned int __seed, char *__statebuf,
                       uintptr_t __statelen, struct random_data *__buf);
extern int setstate_r(char *__statebuf, struct random_data *__buf);
extern int rand(void);
extern void srand(unsigned int __seed);
extern int rand_r(unsigned int *__seed);
extern double drand48(void);
extern double erand48(unsigned short *__xsubi);
extern long lrand48(void);
extern long nrand48(unsigned short *__xsubi);
extern long mrand48(void);