src/GeoIP.rs

extern "C" {
    #[link_name = "\u{1}__isoc99_vscanf"]
    pub fn vscanf1(
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    #[link_name = "\u{1}__isoc99_vsscanf"]
    pub fn vsscanf1(
        __s: *const ::std::ffi::c_char,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fgetc(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getc(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getchar() -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getc_unlocked(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getchar_unlocked() -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fgetc_unlocked(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fputc(__c: ::std::ffi::c_int, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn putc(__c: ::std::ffi::c_int, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn putchar(__c: ::std::ffi::c_int) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fputc_unlocked(__c: ::std::ffi::c_int, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn putc_unlocked(__c: ::std::ffi::c_int, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn putchar_unlocked(__c: ::std::ffi::c_int) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getw(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn putw(__w: ::std::ffi::c_int, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fgets(
        __s: *mut ::std::ffi::c_char,
        __n: ::std::ffi::c_int,
        __stream: *mut FILE,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn __getdelim(
        __lineptr: *mut *mut ::std::ffi::c_char,
        __n: *mut usize,
        __delimiter: ::std::ffi::c_int,
        __stream: *mut FILE,
    ) -> __ssize_t;
}
extern "C" {
    pub fn getdelim(
        __lineptr: *mut *mut ::std::ffi::c_char,
        __n: *mut usize,
        __delimiter: ::std::ffi::c_int,
        __stream: *mut FILE,
    ) -> __ssize_t;
}
extern "C" {
    pub fn getline(
        __lineptr: *mut *mut ::std::ffi::c_char,
        __n: *mut usize,
        __stream: *mut FILE,
    ) -> __ssize_t;
}
extern "C" {
    pub fn fputs(__s: *const ::std::ffi::c_char, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn puts(__s: *const ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ungetc(__c: ::std::ffi::c_int, __stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fread(
        __ptr: *mut ::std::ffi::c_void,
        __size: ::std::ffi::c_ulong,
        __n: ::std::ffi::c_ulong,
        __stream: *mut FILE,
    ) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn fwrite(
        __ptr: *const ::std::ffi::c_void,
        __size: ::std::ffi::c_ulong,
        __n: ::std::ffi::c_ulong,
        __s: *mut FILE,
    ) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn fread_unlocked(
        __ptr: *mut ::std::ffi::c_void,
        __size: usize,
        __n: usize,
        __stream: *mut FILE,
    ) -> usize;
}
extern "C" {
    pub fn fwrite_unlocked(
        __ptr: *const ::std::ffi::c_void,
        __size: usize,
        __n: usize,
        __stream: *mut FILE,
    ) -> usize;
}
extern "C" {
    pub fn fseek(
        __stream: *mut FILE,
        __off: ::std::ffi::c_long,
        __whence: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ftell(__stream: *mut FILE) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn rewind(__stream: *mut FILE);
}
extern "C" {
    pub fn fseeko(
        __stream: *mut FILE,
        __off: __off_t,
        __whence: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ftello(__stream: *mut FILE) -> __off_t;
}
extern "C" {
    pub fn fgetpos(__stream: *mut FILE, __pos: *mut fpos_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fsetpos(__stream: *mut FILE, __pos: *const fpos_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn clearerr(__stream: *mut FILE);
}
extern "C" {
    pub fn feof(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ferror(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn clearerr_unlocked(__stream: *mut FILE);
}
extern "C" {
    pub fn feof_unlocked(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ferror_unlocked(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn perror(__s: *const ::std::ffi::c_char);
}
extern "C" {
    pub fn fileno(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fileno_unlocked(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn pclose(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn popen(
        __command: *const ::std::ffi::c_char,
        __modes: *const ::std::ffi::c_char,
    ) -> *mut FILE;
}
extern "C" {
    pub fn ctermid(__s: *mut ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn flockfile(__stream: *mut FILE);
}
extern "C" {
    pub fn ftrylockfile(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn funlockfile(__stream: *mut FILE);
}
extern "C" {
    pub fn __uflow(arg1: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn __overflow(arg1: *mut FILE, arg2: ::std::ffi::c_int) -> ::std::ffi::c_int;
}
pub type wchar_t = ::std::ffi::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct div_t {
    pub quot: ::std::ffi::c_int,
    pub rem: ::std::ffi::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of div_t"][::std::mem::size_of::<div_t>() - 8usize];
    ["Alignment of div_t"][::std::mem::align_of::<div_t>() - 4usize];
    ["Offset of field: div_t::quot"][::std::mem::offset_of!(div_t, quot) - 0usize];
    ["Offset of field: div_t::rem"][::std::mem::offset_of!(div_t, rem) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ldiv_t {
    pub quot: ::std::ffi::c_long,
    pub rem: ::std::ffi::c_long,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ldiv_t"][::std::mem::size_of::<ldiv_t>() - 16usize];
    ["Alignment of ldiv_t"][::std::mem::align_of::<ldiv_t>() - 8usize];
    ["Offset of field: ldiv_t::quot"][::std::mem::offset_of!(ldiv_t, quot) - 0usize];
    ["Offset of field: ldiv_t::rem"][::std::mem::offset_of!(ldiv_t, rem) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lldiv_t {
    pub quot: ::std::ffi::c_longlong,
    pub rem: ::std::ffi::c_longlong,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of lldiv_t"][::std::mem::size_of::<lldiv_t>() - 16usize];
    ["Alignment of lldiv_t"][::std::mem::align_of::<lldiv_t>() - 8usize];
    ["Offset of field: lldiv_t::quot"][::std::mem::offset_of!(lldiv_t, quot) - 0usize];
    ["Offset of field: lldiv_t::rem"][::std::mem::offset_of!(lldiv_t, rem) - 8usize];
};
extern "C" {
    pub fn __ctype_get_mb_cur_max() -> usize;
}
extern "C" {
    pub fn atof(__nptr: *const ::std::ffi::c_char) -> f64;
}
extern "C" {
    pub fn atoi(__nptr: *const ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn atol(__nptr: *const ::std::ffi::c_char) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn atoll(__nptr: *const ::std::ffi::c_char) -> ::std::ffi::c_longlong;
}
extern "C" {
    pub fn strtod(__nptr: *const ::std::ffi::c_char, __endptr: *mut *mut ::std::ffi::c_char)
        -> f64;
}
extern "C" {
    pub fn strtof(__nptr: *const ::std::ffi::c_char, __endptr: *mut *mut ::std::ffi::c_char)
        -> f32;
}
extern "C" {
    pub fn strtold(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
    ) -> u128;
}
extern "C" {
    pub fn strtol(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
        __base: ::std::ffi::c_int,
    ) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn strtoul(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
        __base: ::std::ffi::c_int,
    ) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn strtoq(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
        __base: ::std::ffi::c_int,
    ) -> ::std::ffi::c_longlong;
}
extern "C" {
    pub fn strtouq(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
        __base: ::std::ffi::c_int,
    ) -> ::std::ffi::c_ulonglong;
}
extern "C" {
    pub fn strtoll(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
        __base: ::std::ffi::c_int,
    ) -> ::std::ffi::c_longlong;
}
extern "C" {
    pub fn strtoull(
        __nptr: *const ::std::ffi::c_char,
        __endptr: *mut *mut ::std::ffi::c_char,
        __base: ::std::ffi::c_int,
    ) -> ::std::ffi::c_ulonglong;
}
extern "C" {
    pub fn l64a(__n: ::std::ffi::c_long) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn a64l(__s: *const ::std::ffi::c_char) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn random() -> ::std::ffi::c_long;
}
extern "C" {
    pub fn srandom(__seed: ::std::ffi::c_uint);
}
extern "C" {
    pub fn initstate(
        __seed: ::std::ffi::c_uint,
        __statebuf: *mut ::std::ffi::c_char,
        __statelen: usize,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn setstate(__statebuf: *mut ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct random_data {
    pub fptr: *mut i32,
    pub rptr: *mut i32,
    pub state: *mut i32,
    pub rand_type: ::std::ffi::c_int,
    pub rand_deg: ::std::ffi::c_int,
    pub rand_sep: ::std::ffi::c_int,
    pub end_ptr: *mut i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of random_data"][::std::mem::size_of::<random_data>() - 48usize];
    ["Alignment of random_data"][::std::mem::align_of::<random_data>() - 8usize];
    ["Offset of field: random_data::fptr"][::std::mem::offset_of!(random_data, fptr) - 0usize];
    ["Offset of field: random_data::rptr"][::std::mem::offset_of!(random_data, rptr) - 8usize];
    ["Offset of field: random_data::state"][::std::mem::offset_of!(random_data, state) - 16usize];
    ["Offset of field: random_data::rand_type"]
        [::std::mem::offset_of!(random_data, rand_type) - 24usize];
    ["Offset of field: random_data::rand_deg"]
        [::std::mem::offset_of!(random_data, rand_deg) - 28usize];
    ["Offset of field: random_data::rand_sep"]
        [::std::mem::offset_of!(random_data, rand_sep) - 32usize];
    ["Offset of field: random_data::end_ptr"]
        [::std::mem::offset_of!(random_data, end_ptr) - 40usize];
};
extern "C" {
    pub fn random_r(__buf: *mut random_data, __result: *mut i32) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn srandom_r(__seed: ::std::ffi::c_uint, __buf: *mut random_data) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn initstate_r(
        __seed: ::std::ffi::c_uint,
        __statebuf: *mut ::std::ffi::c_char,
        __statelen: usize,
        __buf: *mut random_data,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn setstate_r(
        __statebuf: *mut ::std::ffi::c_char,
        __buf: *mut random_data,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn rand() -> ::std::ffi::c_int;
}
extern "C" {
    pub fn srand(__seed: ::std::ffi::c_uint);
}
extern "C" {
    pub fn rand_r(__seed: *mut ::std::ffi::c_uint) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn drand48() -> f64;
}
extern "C" {
    pub fn erand48(__xsubi: *mut ::std::ffi::c_ushort) -> f64;
}
extern "C" {
    pub fn lrand48() -> ::std::ffi::c_long;
}
extern "C" {
    pub fn nrand48(__xsubi: *mut ::std::ffi::c_ushort) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn mrand48() -> ::std::ffi::c_long;
}
